--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      @font-face {
+        font-family: Montserrat;
+        src: url(Montserrat-Medium.ttf);
+      }
+      body {
+        background-color: black;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+      }
+      h1 {
+        color: whitesmoke;
+        font-family: Montserrat;
+      }
+      p {
+        color: whitesmoke;
+        font-family: Montserrat;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="runFlat.png" />
+    <h1>The optimal workout plan</h1>
+    <p>TREN</p>
+  </body>
+</html>
